--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "express": "^4.18.2",
         "mysql2": "^3.9.1",
-        "nodemon": "^3.0.3"
+        "nodemon": "^3.0.3",
+        "sequelize": "^6.37.1"
     }
 }
